# dont-bet-on-sports

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: scheduled_pinger.yml
data/db/: input_struct.csv  stats.csv  tm_names.csv
dbos/: __init__.py  config.py  dataset.py  dbos_app.py  features.py  plots.py
dbos/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: cnn.pt  gbt_latest.pkl  neural_net.pt  rfr_latest.pkl
notebooks/: cnn.ipynb  data_preprocessing.ipynb  data_setup.ipynb  eda.ipynb  eda_data_prep.ipynb  eda_gran_stats.ipynb  hyperparameters.ipynb  modeling.ipynb  reports.ipynb  test_data_pre.ipynb  testing_w_vegas.ipynb  testing_wo_vegas.ipynb  train_data_pre.ipynb
probe-action/: Dockerfile  probe.js
src/: config.py  dataset.py  features.py  pipeline.py  plots.py  reports.py
src/modeling/: predict.py  train.py
src/modeling/nn/: neuralnets.py
